# Genie-TK

./: .gitignore  LICENSE  README.md  README_CN.md  config.py  env.src  pyproject.toml  setup.cfg  setup.py
docs/: index.md  installation.md  quickstart.md
examples/: basic_usage.py
kernels/: bindings.cpp
kernels/fused_layernorm/: layernorm.cu  layernorm.cuh
kernels/triangle_attention/: triangle_attention.cu  triangle_attention.cuh
kernels/triangle_mul/: triangle_mul.cu  triangle_mul.cuh
src/genie_tk/: __init__.py  pair_transform.py  primitives.py  triangle_attention.py  triangle_mul.py  utils.py
tests/: benchmark.py  conftest.py  test_triangle_attention.py  test_triangle_mul.py
